# GameOfLife

./: .gitignore  BandExecutor.hpp  CMakeLists.txt  Common.cpp  Common.hpp  DoubleBuffer.hpp  Grid.hpp  README.md  Utils.hpp  main-cli.cpp  main-raylib.cpp  main-sdl.cpp  main-sfml.cpp  main-unittest.cpp  main.cpp
.github/workflows/: cmake-single-platform.yml  cmake-windows.yml
